# web-scaper

./: .gitignore  README.md  pyproject.toml
app/: scraper.py  web-scaper.py
tests/: test_scraper.py
