[tool.poetry]
name = "web-scaper"
version = "0.1.0"
description = ""
authors = ["will-ing <will-ing@github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.24.0"
beautifulsoup4 = "^4.9.1"
pylint = "^2.5.3"
bs4 = "^0.0.1"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
